feat: complete and working file channel
Signed-off-by: manticore-projects <andreas@manticore-projects.com>